add pie de pagina

--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -730,8 +730,8 @@
                     width: 100vw;
                     height: 100%;
                     background:
-                        repeating-radial-gradient(rgba(255, 255, 255, 0.02)0 0.0001%, #ffffff3f 0 0.0005%) 60% 60%/3000px 3000px,
-                        repeating-conic-gradient(rgba(255, 255, 255, 0.02) 0 0.0001%, #ffffff3f 0 0.0005%) 40% 40%/3000px 3000px;
+                        repeating-radial-gradient(rgba(255, 255, 255, 0.02)0 0.0001%, rgba(238, 255, 0, 0.247) 0 0.0005%) 60% 60%/3000px 3000px,
+                        repeating-conic-gradient(rgba(255, 255, 255, 0.02) 0 0.0001%, rgba(255, 189, 7, 0.247) 0 0.0005%) 40% 40%/3000px 3000px;
                     background-blend-mode: difference;
                     animation: b .50s infinite alternate;
                     backdrop-filter: blur(30px);
@@ -787,7 +787,7 @@
 
 @keyframes b {
     100% {
-        background-position: 10% 0, 30% 10%
+        background-position: 50% 0, 60% 50%
     }
 }
 
