--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -75,259 +75,6 @@ body::-webkit-scrollbar-thumb {
 
 }
 
-//########### pie de pagina ###########//
-.pie {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 0px;
-    gap: 20px;
-    margin-top: 3em;
-    height: 330px;
-    background: #000000;
-    border-radius: 0px;
-
-    .imgenlogo__pie {
-        filter: invert(100%);
-    }
-
-    div {
-        h5 {
-            font-family: 'Poppins';
-            font-style: normal;
-            font-weight: 100;
-            font-size: 16px;
-            line-height: 136%;
-            text-align: center;
-            color: #FFFFFF;
-        }
-
-        h6 {
-            font-family: 'Poppins';
-            font-style: normal;
-            font-weight: 500;
-            font-size: 20px;
-            line-height: 136%;
-            text-align: center;
-            color: #FFFFFF;
-        }
-    }
-
-    .redes__pie {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        padding: 0px;
-        gap: 13px;
-        width: 101px;
-        height: 25px;
-    }
-
-    div {
-        p {
-            font-family: 'Poppins';
-            font-style: normal;
-            font-weight: 100;
-            font-size: 12px;
-            line-height: 136%;
-            text-align: center;
-            color: #FFFFFF;
-        }
-    }
-}
-
-/* ################# RESPONSIVE PIE ############## */
-@media (max-width: 1225px) {
-
-    .pie {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding: 0px;
-        gap: 20px;
-        margin-top: 1em;
-        height: 330px;
-        background: #000000;
-        border-radius: 0px;
-
-        .imgenlogo__pie {
-            filter: invert(100%);
-        }
-
-        div {
-            h5 {
-                font-family: 'Poppins';
-                font-style: normal;
-                font-weight: 100;
-                font-size: 16px;
-                line-height: 136%;
-                text-align: center;
-                color: #FFFFFF;
-            }
-
-            h6 {
-                font-family: 'Poppins';
-                font-style: normal;
-                font-weight: 500;
-                font-size: 20px;
-                line-height: 136%;
-                text-align: center;
-                color: #FFFFFF;
-            }
-        }
-
-        .redes__pie {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            padding: 0px;
-            gap: 13px;
-            width: 101px;
-            height: 25px;
-        }
-
-        div {
-            p {
-                font-family: 'Poppins';
-                font-style: normal;
-                font-weight: 100;
-                font-size: 12px;
-                line-height: 136%;
-                text-align: center;
-                color: #FFFFFF;
-            }
-        }
-    }
-}
-
-@media (max-width: 770px) {
-    .pie {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding: 0px;
-        gap: 20px;
-        margin-top: 1em;
-        height: 330px;
-        background: #000000;
-        border-radius: 0px;
-
-        .imgenlogo__pie {
-            filter: invert(100%);
-        }
-
-        div {
-            h5 {
-                font-family: 'Poppins';
-                font-style: normal;
-                font-weight: 100;
-                font-size: 16px;
-                line-height: 136%;
-                text-align: center;
-                color: #FFFFFF;
-            }
-
-            h6 {
-                font-family: 'Poppins';
-                font-style: normal;
-                font-weight: 500;
-                font-size: 20px;
-                line-height: 136%;
-                text-align: center;
-                color: #FFFFFF;
-            }
-        }
-
-        .redes__pie {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            padding: 0px;
-            gap: 13px;
-            width: 101px;
-            height: 25px;
-        }
-
-        div {
-            p {
-                font-family: 'Poppins';
-                font-style: normal;
-                font-weight: 100;
-                font-size: 12px;
-                line-height: 136%;
-                text-align: center;
-                color: #FFFFFF;
-            }
-        }
-    }
-}
-
-@media (max-width: 424px) {
-    .pie {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding: 0px;
-        gap: 20px;
-        margin-top: 1em;
-        height: 330px;
-        background: #000000;
-        border-radius: 0px;
-
-        .imgenlogo__pie {
-            filter: invert(100%);
-        }
-
-        div {
-            h5 {
-                font-family: 'Poppins';
-                font-style: normal;
-                font-weight: 100;
-                font-size: 16px;
-                line-height: 136%;
-                text-align: center;
-                color: #FFFFFF;
-            }
-
-            h6 {
-                font-family: 'Poppins';
-                font-style: normal;
-                font-weight: 500;
-                font-size: 20px;
-                line-height: 136%;
-                text-align: center;
-                color: #FFFFFF;
-            }
-        }
-
-        .redes__pie {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            padding: 0px;
-            gap: 13px;
-            width: 101px;
-            height: 25px;
-        }
-
-        div {
-            p {
-                font-family: 'Poppins';
-                font-style: normal;
-                font-weight: 100;
-                font-size: 12px;
-                line-height: 136%;
-                text-align: center;
-                color: #FFFFFF;
-            }
-        }
-    }
-}
-
 /* ################# CURSOR ############## */
 .grow,
 .grow-small {
@@ -364,26 +111,31 @@ p {
 /* ################# NUEVO MENU ############## */
 .conte__menu {
     margin: 2rem 5rem 2rem 5rem;
+
     .header__index {
         display: flex;
         justify-content: space-between;
         justify-items: center;
+
         .cont__logo__nav {
             transform: scale(0.9);
             z-index: 1000;
             filter: invert(100%);
         }
+
         .icono-menu {
             transform: scale(0.8);
             z-index: 1000;
             margin-right: 5px;
+
             .bars__menu {
                 width: 10px;
                 height: 10px;
-                position:relative;
+                position: relative;
                 top: 50%;
                 left: 0%;
                 transform: translate(-100%, -50%) scale(4);
+
                 span {
                     display: block;
                     width: 100%;
@@ -422,7 +174,7 @@ p {
         top: 0px;
         width: 0px;
         height: 100vh;
-        position:fixed;
+        position: fixed;
         z-index: 9;
         background: #FFF;
         transform-origin: 0px 0%;
@@ -627,12 +379,13 @@ p {
             .lista_uno {
                 width: 100%;
                 margin-bottom: 20px;
+
                 .cont_opcion_lista {
                     width: 100%;
                     display: flex;
                     flex-direction: row;
                     align-items: center;
-                    justify-content:start;
+                    justify-content: start;
                     overflow: hidden;
 
                     .flachamenu {
@@ -773,16 +526,129 @@ p {
 
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1000px) {}
 
-}
+@media (max-width: 690px) {}
 
-@media (max-width: 690px) {
+@media (max-width: 400px) {}
 
-}
+/* ##################### PIE ############################# */
+.cont_pie_de_pagina {
+    background: #000000;
+    padding: 15em 5em 5em 5em;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    overflow: hidden;
+    gap: 5em;
 
-@media (max-width: 400px) {
+    .cont_titulo_pie {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 100%;
+        h2 {
+            color: #FFF;
+            font-family: Sora;
+            font-size: 70px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 136%;
+            text-transform: capitalize;
+            strong {
+                color: rgb(255, 230, 0);
+                font-family: Sorts Mill Goudy;
+                font-size: 75px;
+                font-style: italic;
+                font-weight: 700;
+                line-height: 136%;
+                text-transform: uppercase;
+            }
+        }
+        img{
+            Clip-path: inset(50px 50px 50px 50px);
+            width: 800px;
+            overflow: hidden;
+        }
 
+    }
+
+    .list_social {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+
+        .cont_uno {
+            .titulo_list_social {
+                color: #ffffff;
+                font-family: Sora;
+                font-size: 18px;
+                font-style: normal;
+                font-weight: 250;
+                line-height: 107.5%;
+                margin-bottom: 20px;
+            }
+
+            ul {
+                display: flex;
+                flex-direction: row;
+                gap: 1em;
+
+                a {
+                    color: #ffffff;
+                    font-family: Sora;
+                    font-size: 18px;
+                    font-style: normal;
+                    font-weight: 300;
+                    line-height: 107.5%;
+                    /* 19.35px */
+                }
+            }
+        }
+
+        .cont_dos {
+            display: flex;
+            flex-direction: column;
+
+            p {
+                color: #ffffff;
+                font-family: Sora;
+                font-size: 18px;
+                font-style: normal;
+                font-weight: 250;
+                line-height: 107.5%;
+                margin-bottom: 20px;
+            }
+
+            h5 {
+                color: #ffffff;
+                font-family: Sora;
+                font-size: 15px;
+                font-style: normal;
+                font-weight: 500;
+                line-height: 107.5%;
+                display: flex;
+                padding: 0px 5px 5px 0px;
+                align-items: center;
+                align-self: stretch;
+                border-bottom: 0.5px solid #ffffff;
+            }
+
+        }
+
+
+    }
+
+    .grillapie {
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 0;
+        width: 100vw;
+        margin-left: 10em;
+    }
 }
 
 
@@ -851,7 +717,7 @@ p {
 
 
 .slider_uno {
-    position:fixed;
+    position: fixed;
     z-index: 0;
     top: 0;
     left: 0;
@@ -883,7 +749,7 @@ p {
             width: 100%;
             display: flex;
             align-items: center;
-            
+
 
 
             p {
@@ -896,7 +762,7 @@ p {
                 line-height: normal;
                 white-space: nowrap;
             }
-            
+
         }
     }
 
@@ -929,13 +795,13 @@ p {
                 line-height: normal;
                 white-space: nowrap;
             }
-            
+
         }
     }
 }
 
 .slider_dos {
-    position:fixed;
+    position: fixed;
     z-index: 1;
     bottom: 0;
     top: 0;
@@ -951,7 +817,7 @@ p {
     justify-content: space-between;
     align-items: flex-start;
     flex-shrink: 0;
-    
+
     .slide-track {
         -webkit-animation: scroll 30s linear infinite;
         animation: scroll 30s linear infinite;
@@ -1017,9 +883,9 @@ p {
 }
 
 
-@media (max-width: 800px){
+@media (max-width: 800px) {
     .slider_uno {
-        position:fixed;
+        position: fixed;
         z-index: 0;
         top: 0;
         left: 0;
@@ -1035,7 +901,7 @@ p {
         justify-content: space-between;
         align-items: flex-start;
         flex-shrink: 0;
-    
+
         .slide-track {
             -webkit-animation: scroll 30s linear infinite;
             animation: scroll 30s linear infinite;
@@ -1045,14 +911,14 @@ p {
             border: 1px solid #000;
             background: #FFF;
             box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.123);
-    
+
             .slide {
                 height: 100%;
                 width: 100%;
                 display: flex;
                 align-items: center;
-    
-    
+
+
                 p {
                     color: #000;
                     font-family: Poppins;
@@ -1065,7 +931,7 @@ p {
                 }
             }
         }
-    
+
         .slide-track-contra {
             -webkit-animation: scrollcontra 30s linear infinite;
             animation: scrollcontra 30s linear infinite;
@@ -1075,16 +941,16 @@ p {
             border: 1px solid #000;
             background: #FFF;
             box-shadow: 0px -5px 10px 2px rgba(0, 0, 0, 0.123);
-    
-    
+
+
             .slide {
                 height: 100%;
                 width: 100%;
                 display: flex;
                 align-items: center;
                 transform: rotate(180deg);
-    
-    
+
+
                 p {
                     color: #000;
                     font-family: Poppins;
@@ -1098,8 +964,9 @@ p {
             }
         }
     }
+
     .slider_dos {
-        position:fixed;
+        position: fixed;
         z-index: 1;
         bottom: 0;
         top: 0;
@@ -1115,7 +982,7 @@ p {
         justify-content: space-between;
         align-items: flex-start;
         flex-shrink: 0;
-        
+
         .slide-track {
             -webkit-animation: scroll 30s linear infinite;
             animation: scroll 30s linear infinite;
@@ -1125,14 +992,14 @@ p {
             border: 1px solid #000;
             background: #FFF;
             box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.123);
-    
+
             .slide {
                 height: 100%;
                 width: 100vh;
                 display: flex;
                 align-items: center;
-    
-    
+
+
                 p {
                     color: #000;
                     font-family: Poppins;
@@ -1145,7 +1012,7 @@ p {
                 }
             }
         }
-    
+
         .slide-track-contra {
             -webkit-animation: scrollcontra 30s linear infinite;
             animation: scrollcontra 30s linear infinite;
@@ -1156,16 +1023,16 @@ p {
             border: 1px solid #000;
             background: #d11212;
             box-shadow: 0px -5px 10px 2px rgba(0, 0, 0, 0.123);
-    
-    
+
+
             .slide {
                 height: 100%;
                 width: 100vh;
                 display: flex;
                 align-items: center;
                 transform: rotate(180deg);
-    
-    
+
+
                 p {
                     color: #000;
                     font-family: Poppins;
@@ -1182,11 +1049,11 @@ p {
 
 }
 
-@media (max-width: 700px){
+@media (max-width: 700px) {
     .slider_uno {
         visibility: hidden;
-        
-        position:fixed;
+
+        position: fixed;
         z-index: 0;
         top: 0;
         left: 0;
@@ -1202,7 +1069,7 @@ p {
         justify-content: space-between;
         align-items: flex-start;
         flex-shrink: 0;
-    
+
         .slide-track {
             -webkit-animation: scroll 30s linear infinite;
             animation: scroll 30s linear infinite;
@@ -1212,14 +1079,14 @@ p {
             border: 1px solid #000;
             background: #FFF;
             box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.123);
-    
+
             .slide {
                 height: 100%;
                 width: 100%;
                 display: flex;
                 align-items: center;
-    
-    
+
+
                 p {
                     color: #000;
                     font-family: Poppins;
@@ -1232,7 +1099,7 @@ p {
                 }
             }
         }
-    
+
         .slide-track-contra {
             -webkit-animation: scrollcontra 30s linear infinite;
             animation: scrollcontra 30s linear infinite;
@@ -1242,16 +1109,16 @@ p {
             border: 1px solid #000;
             background: #FFF;
             box-shadow: 0px -5px 10px 2px rgba(0, 0, 0, 0.123);
-    
-    
+
+
             .slide {
                 height: 100%;
                 width: 100%;
                 display: flex;
                 align-items: center;
                 transform: rotate(180deg);
-    
-    
+
+
                 p {
                     color: #000;
                     font-family: Poppins;
@@ -1265,9 +1132,10 @@ p {
             }
         }
     }
+
     .slider_dos {
         visibility: hidden;
-        position:fixed;
+        position: fixed;
         z-index: 1;
         bottom: 0;
         top: 0;
@@ -1283,7 +1151,7 @@ p {
         justify-content: space-between;
         align-items: flex-start;
         flex-shrink: 0;
-        
+
         .slide-track {
             -webkit-animation: scroll 30s linear infinite;
             animation: scroll 30s linear infinite;
@@ -1293,14 +1161,14 @@ p {
             border: 1px solid #000;
             background: #FFF;
             box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.123);
-    
+
             .slide {
                 height: 100%;
                 width: 100vh;
                 display: flex;
                 align-items: center;
-    
-    
+
+
                 p {
                     color: #000;
                     font-family: Poppins;
@@ -1313,7 +1181,7 @@ p {
                 }
             }
         }
-    
+
         .slide-track-contra {
             -webkit-animation: scrollcontra 30s linear infinite;
             animation: scrollcontra 30s linear infinite;
@@ -1324,16 +1192,16 @@ p {
             border: 1px solid #000;
             background: #d11212;
             box-shadow: 0px -5px 10px 2px rgba(0, 0, 0, 0.123);
-    
-    
+
+
             .slide {
                 height: 100%;
                 width: 100vh;
                 display: flex;
                 align-items: center;
                 transform: rotate(180deg);
-    
-    
+
+
                 p {
                     color: #000;
                     font-family: Poppins;
@@ -1610,5 +1478,3 @@ p {
         transform: translateX(0px)scale(1.5)rotate(3deg);
     }
 }
-
-
