--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -52,9 +52,11 @@ body::-webkit-scrollbar-thumb {
     position: fixed;
     width: 50px;
     height: 50px;
-    bottom: 60px;
-    right: 60px;
+    top: 20vh;
+    left: 70vw;
     z-index: 1;
+    transform: scale(1.7);
+    rotate: 20deg;
 
     .botonfloat__wapp {
         margin-top: 23px;
